Fix up the header menu alignment, and put Facebook link into the footer.

--- a/css/src/_header.scss
+++ b/css/src/_header.scss
@@ -89,12 +89,13 @@ header {
 				}
 
 				@include respond-to( $menu-bp ) {
-					display: inline;
+					float: left;
 
 					a {
 						display: inline-block;
 						margin-right: 10px;
 						padding: 12px 20px;
+						line-height: 28px;
 						opacity: 1;
 						transition: 300ms opacity ease-in-out;
 
@@ -110,6 +111,7 @@ header {
 			position: absolute;
 			top: 0;
 			right: 0;
+			height: 50px;
 		}
 	}
 
