--- a/css/src/_home.scss
+++ b/css/src/_home.scss
@@ -8,16 +8,12 @@
 	@include clearfix;
 
 	.post-title {
-		min-height: 60px;
 		text-transform: uppercase;
 
 		a {
 			color: $grey-dark;
+			@include font-bold;
 		}
 	}
-}
-
-.home {
-
 }
 
